--- a/MFCDraw.vcxproj
+++ b/MFCDraw.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="MFCDrawDoc.h" />
     <ClInclude Include="MFCDrawView.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Socket.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -196,6 +197,7 @@
     <ClCompile Include="MFCDraw.cpp" />
     <ClCompile Include="MFCDrawDoc.cpp" />
     <ClCompile Include="MFCDrawView.cpp" />
+    <ClCompile Include="Socket.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
